--- a/04-noticias/package.json
+++ b/04-noticias/package.json
@@ -27,6 +27,8 @@
     "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "rxjs": "~6.6.0",
