--- a/04-noticias/package.json
+++ b/04-noticias/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
+    "@schematics/angular": "^14.0.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "rxjs": "~6.6.0",
