--- a/06-qrscanner/package.json
+++ b/06-qrscanner/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.43.0",
+    "@awesome-cordova-plugins/email-composer": "^5.43.0",
     "@awesome-cordova-plugins/file": "^5.43.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.43.0",
     "@capacitor/app": "1.1.1",
@@ -29,6 +30,7 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-email-composer": "^0.10.0",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
